added text and background coloring to header

--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
   <head>
     <title>Tent Artist</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div class="header">Tent Artist</div>
-    <ul>
-      <li><a href="www.google.com">Header Link One</a></li>
-      <li><a href="www.google.com">Header Link Two</a></li>
-      <li><a href="www.google.com">Header Link Three</a></li>
-    </ul>
-  
+    <div class="header">
+      <p style="font-size: 24px; color:#f9faf8;">Tent Artist</p>
+      <ul>
+        <li><a href="www.google.com">Header Link One</a></li>
+        <li><a href="www.google.com">Header Link Two</a></li>
+        <li><a href="www.google.com">Header Link Three</a></li>
+      </ul> 
+    </div>
 
     <h1>This website is awesome</h1>
     <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is a lower contrast.</p>
