added footer and .html notes to separate sections

--- a/index.html
+++ b/index.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title>Tent Artist</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
+</head>
+<body>
+ <!--HEADER--> 
     <div class="header">
-      <p style="font-size: 24px; color:#f9faf8;">Tent Artist</p>
+      <p style="font-size: 24px; color:#f9faf8; font-weight: 900;">Header Logo</p>
       <ul>
         <li><a href="www.google.com">Header Link One</a></li>
         <li><a href="www.google.com">Header Link Two</a></li>
         <li><a href="www.google.com">Header Link Three</a></li>
       </ul> 
     </div>
+<!--HEADER-->
 
+<!--1ST SECTION-->
     <h1>This website is awesome</h1>
     <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is a lower contrast.</p>
     <button>Sign up</button>
-
     <img src="" alt="this is a placeholder for an image">
+<!--1ST SECTION-->
 
+<!--2ND SECTION-->
     <h2>Some Random Information</h2>
-    <img src="" alt="image">
-    <p>This is some subtext under an illustration or image</p>
 
     <img src="" alt="image">
     <p>This is some subtext under an illustration or image</p>
@@ -34,12 +36,26 @@
     <img src="" alt="image">
     <p>This is some subtext under an illustration or image</p>
 
+    <img src="" alt="image">
+    <p>This is some subtext under an illustration or image</p>
+<!--2ND SECTION-->
+
+<!--QUOTE SECTION-->
     <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
     <h4>-Thor, God of Thunder</h4>
+<!--QUOTE SECTION-->
 
+<!--LAST SECTION-->
     <p>Call to Action! It's time!</p>
     <p>Sign up for our product by clocking that button right over there!</p>
     <button>Sign up</button>
+<!--LAST SECTION-->    
 
-  </body>
+<!--FOOTER-->
+    <P>Copyright</P>
+    <span>&copy</span>
+    <p>The Odin Project 2021</p>
+<!--FOOTER-->
+
+</body>
 </html>
