.html and .css footer section is complete

--- a/index.html
+++ b/index.html
@@ -52,9 +52,12 @@
 <!--LAST SECTION-->    
 
 <!--FOOTER-->
+  <div class="footer">
     <P>Copyright</P>
     <span>&copy</span>
     <p>The Odin Project 2021</p>
+  </div>  
+  
 <!--FOOTER-->
 
 </body>
