wored on 1st section layout. edited font and flexbox

--- a/index.html
+++ b/index.html
@@ -18,13 +18,20 @@
 <!--HEADER-->
 
 <!--1ST SECTION-->
-    <h1>This website is awesome</h1>
-    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is a lower contrast.</p>
-    <button>Sign up</button>
-    <img src="" alt="this is a placeholder for an image">
+  <div class="first">
+    <div class="first-text">
+      <h1 style="font-size:48px; font-weight: 1000;">This website is awesome</h1>
+      <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is a lower contrast.</p>
+      <button>Sign up</button>
+    </div>
+   <div class="first-image">
+      <img src="" alt="this is a placeholder for an image">
+   </div> 
+  </div>
 <!--1ST SECTION-->
 
-<!--2ND SECTION-->
+<!--IMAGE SECTION-->
+<div class="images">
     <h2>Some Random Information</h2>
 
     <img src="" alt="image">
@@ -38,17 +45,22 @@
 
     <img src="" alt="image">
     <p>This is some subtext under an illustration or image</p>
-<!--2ND SECTION-->
+  </div>
+<!--IMAGE SECTION-->
 
 <!--QUOTE SECTION-->
+  <div class="quote">
     <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
     <h4>-Thor, God of Thunder</h4>
+  </div>
 <!--QUOTE SECTION-->
 
 <!--LAST SECTION-->
+  <div class="last">
     <p>Call to Action! It's time!</p>
     <p>Sign up for our product by clocking that button right over there!</p>
     <button>Sign up</button>
+  </div>
 <!--LAST SECTION-->    
 
 <!--FOOTER-->
