--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
 <!--QUOTE SECTION-->
   <div class="quote">
-    <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-    <h4>-Thor, God of Thunder</h4>
+    <em style="line-height: 25px;">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em>
+    <h4 style=" align-self:flex-end;">-Thor, God of Thunder</h4>
   </div>
 <!--QUOTE SECTION-->
 
